[gd_scene load_steps=25 format=3 uid="uid://c2qugqteleiv5"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_u7oxn"]
[ext_resource type="Texture2D" uid="uid://ds8h5a8rmbamx" path="res://assets/art/survivalgame-enemy-slime.png" id="2_jq0t2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_14ujc"]
atlas = ExtResource("2_jq0t2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx36c"]
atlas = ExtResource("2_jq0t2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb8nq"]
atlas = ExtResource("2_jq0t2")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bpcx"]
atlas = ExtResource("2_jq0t2")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jw3v"]
atlas = ExtResource("2_jq0t2")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulnfi"]
atlas = ExtResource("2_jq0t2")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6svie"]
atlas = ExtResource("2_jq0t2")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iqeg"]
atlas = ExtResource("2_jq0t2")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avv5w"]
atlas = ExtResource("2_jq0t2")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynxtx"]
atlas = ExtResource("2_jq0t2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0qm0"]
atlas = ExtResource("2_jq0t2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_po30l"]
atlas = ExtResource("2_jq0t2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lom4a"]
atlas = ExtResource("2_jq0t2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5t1k"]
atlas = ExtResource("2_jq0t2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ija1a"]
atlas = ExtResource("2_jq0t2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyct4"]
atlas = ExtResource("2_jq0t2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awuaf"]
atlas = ExtResource("2_jq0t2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0teb"]
atlas = ExtResource("2_jq0t2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rbd87"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14ujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb8nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bpcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jw3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulnfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6svie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iqeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avv5w")
}],
"loop": true,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynxtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0qm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po30l")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lom4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5t1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ija1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyct4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awuaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0teb")
}],
"loop": true,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvxw5"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5pkp2"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_55r8n"]
radius = 64.2806

[node name="slime" type="CharacterBody2D" groups=["inimigos"]]
script = ExtResource("1_u7oxn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rbd87")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_qvxw5")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_5pkp2")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_55r8n")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
